--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#1D330E",
-        "titleBar.activeBackground": "#294813",
+        "activityBar.background": "#c7dfb7",
+        "titleBar.activeBackground": "#d0f1b8",
         "titleBar.activeForeground": "#F7FCF3"
     }
 }
