--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "add": "^2.0.6",
     "firebase": "^8.2.3",
     "next": "12.0.7",
+    "next-pwa": "^5.5.0",
     "react": "17.0.2",
     "react-country-region-selector": "^3.4.0",
     "react-dom": "17.0.2",
